--- a/public/views/index.html
+++ b/public/views/index.html
@@ -61,13 +61,13 @@
 
       <div class="col-xs-12 col-md-4 col-gray">
         <h2 translate>About</h2>
-        <p translate><strong>Garlicoin Insight</strong>  is a highly performant Garlicoin explorer and API with complete REST and websocket APIs that can be used for writing web wallets and other apps that need more advanced blockchain queries than provided by garlicoind RPC. Documentation will be coming soon.
+        <p translate><strong>GarlicBlocks.com</strong> is a highly performant Garlicoin explorer and API. Track Garlicoin transactions, addresses, and confirmations.
         </p>
         <p>
           Caution: website is currently in development and may be unstable at times.
         </p>
         <p>
-          Donate GRLC: <a href="address/GVE8M5E1hwHrL7D8yW8QkU16w1L8sXTLYS">GVE8M5E1hwHrL7D8yW8QkU16w1L8sXTLYS</a>
+          Donate GRLC: <a href="address/GWHbXkRL6tSPBUQKLjLsqLoCZNHQkJEjJD">GWHbXkRL6tSPBUQKLjLsqLoCZNHQkJEjJD</a>
         </p>
         <div id="powered" class="row">
           <div class="powered-text">
